[EDP-DDM-9502] user-process-management refactored with using business-facades/business-services concept
Change-Id: Iee0fe747af4d384090c81bc278aa946ea0ed5942